<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tvTituloCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cadastro"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etNovaPalavra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_nova_palavra"
        android:inputType="textCapCharacters"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="yes"
        android:autofillHints="none" />

    <EditText
        android:id="@+id/etCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_categoria"
        android:inputType="text"
        android:layout_marginBottom="32dp"
        android:importantForAccessibility="yes"
        android:autofillHints="none" />

    <Button
        android:id="@+id/btnSalvarPalavra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/btn_salvar_palavra" />

</LinearLayout>