<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.tools.com/tools"
    android:layout_width="match_match"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_boas_vindas"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_mb="32dp"/>

    <EditText
        android:id="@+id/etNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nickname"
        android:inputType="textPersonName"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_selecione_avatar"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <ImageButton
        android:id="@+id/btnAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/label_selecione_avatar"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_iniciar_jogo"/>

</LinearLayout>